--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:exported="false"
             android:theme="@style/Theme.BloodBankApp.StatusBarPink" />
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".activities.LoginRegisterActivity"
             android:exported="false"
             android:theme="@style/Theme.BloodBankApp.StatusBarPink" />
 
